--- a/public/index.html
+++ b/public/index.html
@@ -5,126 +5,105 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Student Collab Hub</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f2f5;
-      padding: 40px;
+      background: #f0f2f5;
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding-top: 60px;
     }
-
-    h1 {
-      margin-top: 20px;
-      color: #333;
+    h2 {
+      margin-top: 40px;
     }
-
-    form {
+    .form-box {
       background: white;
-      padding: 20px 30px;
-      margin: 20px 0;
+      padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 400px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 300px;
+      margin-bottom: 30px;
     }
-
     input {
       width: 100%;
       padding: 10px;
-      margin-top: 10px;
-      margin-bottom: 15px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      margin: 8px 0;
+      box-sizing: border-box;
     }
-
     button {
       width: 100%;
       padding: 10px;
-      background-color: #007bff;
+      background: #0033cc;
       color: white;
-      font-size: 16px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
-
     button:hover {
-      background-color: #0056b3;
+      background: #002699;
     }
   </style>
 </head>
 <body>
-  <h1>Register</h1>
-  <form id="registerForm">
-    <input type="text" placeholder="Username" name="username" required />
-    <input type="email" placeholder="Email" name="email" required />
-    <input type="password" placeholder="Password" name="password" required />
-    <button type="submit">Register</button>
-  </form>
 
-  <h1>Login</h1>
-  <form id="loginForm">
-    <input type="email" placeholder="Email" name="email" required />
-    <input type="password" placeholder="Password" name="password" required />
-    <button type="submit">Login</button>
-  </form>
+  <div class="form-box">
+    <h2>Register</h2>
+    <input type="text" id="regUsername" placeholder="Username" />
+    <input type="email" id="regEmail" placeholder="Email" />
+    <input type="password" id="regPassword" placeholder="Password" />
+    <button onclick="register()">Register</button>
+  </div>
+
+  <div class="form-box">
+    <h2>Login</h2>
+    <input type="email" id="loginEmail" placeholder="Email" />
+    <input type="password" id="loginPassword" placeholder="Password" />
+    <button onclick="login()">Login</button>
+  </div>
 
   <script>
-    // Handle Registration
-    document.getElementById('registerForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const data = {
-        username: form.username.value,
-        email: form.email.value,
-        password: form.password.value
-      };
+    const API_URL = 'https://student-collab-hub-bsjl.onrender.com';
+
+    async function register() {
+      const username = document.getElementById('regUsername').value;
+      const email = document.getElementById('regEmail').value;
+      const password = document.getElementById('regPassword').value;
 
       try {
-        const res = await fetch('/register', {
+        const res = await fetch(`${API_URL}/register`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
+          body: JSON.stringify({ username, email, password })
         });
-        const result = await res.json();
-        alert(result.message);
+
+        const text = await res.text();
+        const data = JSON.parse(text);
+        alert(data.message);
       } catch (err) {
         alert('Register failed: ' + err.message);
       }
-    });
+    }
 
-    // Handle Login
-    document.getElementById('loginForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const data = {
-        email: form.email.value,
-        password: form.password.value
-      };
+    async function login() {
+      const email = document.getElementById('loginEmail').value;
+      const password = document.getElementById('loginPassword').value;
 
       try {
-        const res = await fetch('/login', {
+        const res = await fetch(`${API_URL}/login`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
+          body: JSON.stringify({ email, password })
         });
-        const result = await res.json();
-        alert(result.message);
 
-        if (result.message === "Login successful") {
-          localStorage.setItem('userEmail', form.email.value);
-          window.location.href = "/dashboard.html";
-        }
+        const text = await res.text();
+        const data = JSON.parse(text);
+        alert(data.message);
+        // Optionally redirect:
+        // window.location.href = '/dashboard.html';
       } catch (err) {
         alert('Login failed: ' + err.message);
       }
-    });
+    }
   </script>
 </body>
 </html>
