--- a/student-collab-frontend/index.html
+++ b/student-collab-frontend/index.html
@@ -77,6 +77,7 @@
 
   <script>
     // Handle Registration
+    const API = "https://student-collab-hub-bsj.onrender.com";
     document.getElementById('registerForm').addEventListener('submit', async (e) => {
       e.preventDefault();
       const form = e.target;
@@ -87,7 +88,7 @@
       };
 
       try {
-        const res = await fetch('/register', {
+       const res = await fetch(`${API}/register`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
@@ -109,7 +110,7 @@
       };
 
       try {
-        const res = await fetch('/login', {
+       const res = await fetch(`${API}/login`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
@@ -119,7 +120,7 @@
 
         if (result.message === "Login successful") {
           localStorage.setItem('userEmail', form.email.value);
-          window.location.href = "/dashboard.html";
+         window.location.href = "dashboard.html";
         }
       } catch (err) {
         alert('Login failed: ' + err.message);
@@ -128,3 +129,4 @@
   </script>
 </body>
 </html>
+
